@@ -1,4 +1,4 @@
-.TH VIFM 1 "October 15, 2016" "vifm 0.8.2"
+.TH VIFM 1 "October 18, 2016" "vifm 0.8.2"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -4923,6 +4923,9 @@ the list, but marked as being cancelled (if cancellation was successfully
 requested).  A message will pop up if the job has already stopped.
 Note that on Windows cancelling external programs like this might not work,
 because their parent shell doesn't have any windows.
+
+e key displays errors of selected job if any were collected.  They are
+displayed in a new menu, but you can get back to jobs menu by pressing h.
 
 .\" ---------------------------------------------------------------------------
 .SH Custom views
