@@ -36,6 +36,9 @@
 
 	Added shell completion for bash and zsh.  Patches by filterfalse.
 
+	Added e key to :jobs menu that displays list of errors issues by that
+	jobs, if any.  h key goes back to :jobs menu.
+
 	Enable restoring files from trash from custom views.
 
 	View current directory on ".." for quickview/view mode.  Thanks to
